# luacom

./: CMakeLists.txt  INSTALL  Makefile  Makefile.win  Makefile53  Makefile53.win  dist.cmake  dist.info  luacom-1.3.1-1.rockspec  make4.bat  make5.bat  makeLog.txt
demo/ado/: test.mdb
demo/comm/: plasma.lua  tst_plasma.lua
demo/control/: testcontrol.tlb
demo/safearrays/ComponentCpp/: Test.cpp
demo/server/: testlua.tlb
demo/speech/: tst.lua
doc/: Makefile  luacom.tex
mak/: dependences.mak
mak.tecmake/: luacom_lib.mak
mak.vs2005/: luacom.dll.vcproj  luacom.vsprops
src/: luacom.inc
src/dll/: luacom.lua  luacom_dll.cpp
src/test/: luacom_tests4.lua  luacom_tests5.lua  test.idl  test.tlb
